--- a/Exo1/css/sass/main.scss
+++ b/Exo1/css/sass/main.scss
@@ -1,9 +1,10 @@
 //    MODULES
+@import "partials/_font-face";
 
 @import "modules/colors";
+@import "modules/fonts";
 
 //    PARTIALS
-
 
 
 //    PAGES
