--- a/Exo1/css/style.css
+++ b/Exo1/css/style.css
@@ -1,3 +1,63 @@
+@font-face {
+  font-family: "GINKO/test";
+  src: url("../fonts/GINKO.TTF");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  font-family: "Melbourne";
+  src: url("../fonts/Melbourne_regular_basic.otf");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  font-family: "Melbourne";
+  src: url("../fonts/Melbourne light basic.otf");
+  font-weight: lighter;
+  font-style: normal; }
+@font-face {
+  font-family: "Melbourne";
+  src: url("../fonts/Melbourne bold basic.otf");
+  font-weight: bold;
+  font-style: normal; }
+* {
+  margin: 0;
+  padding: 0; }
 
+body {
+  background: url("../images/bg_header.jpg") top center no-repeat, url("../images/bg_body.jpg"); }
+  body header {
+    background-color: darkolivegreen;
+    opacity: 0.8;
+    height: 25px; }
+    body header nav {
+      width: 500px;
+      margin-left: 50%; }
+      body header nav ul li {
+        list-style-type: none;
+        font-family: "Melbourne";
+        display: inline-block;
+        padding: 2px;
+        margin: 0px 12px; }
+  body .container {
+    width: 950px;
+    margin: auto; }
+  body .header_section > img:first-child {
+    display: inline-block;
+    margin-top: 25px; }
+  body figure {
+    margin-top: 115px; }
+    body figure img:last-of-type {
+      vertical-align: top; }
+    body figure figcaption {
+      margin-top: -50px;
+      width: 200px;
+      text-align: right;
+      margin: -50px 0px 0px 73%; }
+
+p {
+  color: #228;
+  font-family: "GINKO/test"; }
+
+h2 {
+  font-family: "Melbourne"; }
 
 /*# sourceMappingURL=style.css.map */
