--- a/Exo1/css/sass/main.scss
+++ b/Exo1/css/sass/main.scss
@@ -1,10 +1,13 @@
-//    MODULES
+//    PARTIALS
+
 @import "partials/_font-face";
+@import "partials/_text-green";
+
+
+//    MODULES
 
 @import "modules/colors";
 @import "modules/fonts";
-
-//    PARTIALS
 
 
 //    PAGES
