--- a/Exo1/css/sass/modules/fonts.scss
+++ b/Exo1/css/sass/modules/fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-    @include font("GINKO/test", "../fonts/GINKO.TTF");
+    @include font("GINKO", "../fonts/GINKO.TTF");
 }
 
 @font-face {
