--- a/Exo1/css/style.css
+++ b/Exo1/css/style.css
@@ -1,4 +1,4 @@
-.text-green, .text-green-no-underline, body figure figcaption a {
+.text-green, .text-green-no-underline, body figure figcaption a, body footer div:last-of-type p a {
   font-size: 12px;
   color: darkolivegreen;
   font-weight: bold; }
@@ -123,8 +123,10 @@ body {
       color: #311; }
   body .info {
     width: 35%;
+    height: 388px;
     display: inline-block;
-    margin-left: 10px; }
+    margin-left: 10px;
+    background: url(../images/pot_newsletter.png) bottom right no-repeat; }
     body .info > div:first-of-type {
       box-sizing: border-box; }
       body .info > div:first-of-type h2 {
@@ -132,7 +134,7 @@ body {
       body .info > div:first-of-type div {
         width: 48%;
         display: inline-block;
-        margin-bottom: 30px; }
+        margin-bottom: 12px; }
         body .info > div:first-of-type div ul {
           list-style-image: url(../images/puce_feuille.png);
           padding-left: 30px;
@@ -161,5 +163,29 @@ body {
     body .info p {
       margin-top: 10px;
       font-size: 13px; }
+  body .actu {
+    height: 410px; }
+  body footer {
+    background: url(../images/bg_footer.png);
+    margin-bottom: 30px; }
+    body footer div {
+      display: inline-block; }
+    body footer div:first-of-type {
+      width: 25%;
+      padding: 9px 0px;
+      margin-left: 60px;
+      box-sizing: border-box; }
+      body footer div:first-of-type p {
+        display: inline-block;
+        font-family: Arial, sans-serif;
+        font-size: 12px;
+        font-weight: bold; }
+      body footer div:first-of-type img {
+        vertical-align: text-bottom; }
+    body footer div:last-of-type {
+      width: 68%; }
+      body footer div:last-of-type p {
+        font-size: 12px;
+        text-align: right; }
 
 /*# sourceMappingURL=style.css.map */
