--- a/Exo2/css/style.css
+++ b/Exo2/css/style.css
@@ -1,3 +1,139 @@
+* {
+  margin: 0px;
+  padding: 0px; }
 
+body {
+  border-top: 4px solid #d1531e;
+  background-image: url("../img/bg-body.jpg"); }
+  body h1, body h2, body h3 {
+    text-transform: uppercase; }
+  body h2 {
+    background-color: #333;
+    padding: 10px;
+    font-size: 14px;
+    color: #f3f3f3;
+    margin-bottom: 32px; }
+    body h2 span {
+      color: #d1531e; }
+  body .container {
+    width: 970px;
+    margin: 0px auto; }
+    body .container header {
+      margin-top: 35px;
+      margin-bottom: 40px; }
+      body .container header nav {
+        display: inline-block;
+        width: 50%;
+        background-color: #333;
+        padding-left: 12px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        color: #f3f3f3;
+        box-sizing: border-box;
+        margin-left: 211px;
+        vertical-align: top; }
+        body .container header nav ul li {
+          list-style-type: none;
+          display: inline-block;
+          margin-right: 20px;
+          font-size: 21px; }
+        body .container header nav ul li:last-of-type {
+          margin-right: 0px; }
+    body .container main section:nth-of-type(1) {
+      vertical-align: top;
+      margin-bottom: 110px; }
+      body .container main section:nth-of-type(1) img {
+        width: 64%; }
+      body .container main section:nth-of-type(1) div {
+        height: 276px;
+        vertical-align: inherit;
+        display: inline-block;
+        width: 34%;
+        padding: 20px 15px;
+        box-sizing: border-box;
+        height: 276px; }
+        body .container main section:nth-of-type(1) div h1 {
+          font-size: 24px;
+          font-weight: 500;
+          color: #333;
+          margin-bottom: 20px; }
+        body .container main section:nth-of-type(1) div p {
+          color: #848484;
+          font-size: 24px; }
+    body .container main section:nth-of-type(2) {
+      margin-bottom: 70px; }
+      body .container main section:nth-of-type(2) div div.works div {
+        width: 23%;
+        display: inline-block;
+        margin-right: 21px; }
+        body .container main section:nth-of-type(2) div div.works div img {
+          width: 223px; }
+        body .container main section:nth-of-type(2) div div.works div div {
+          width: 223px;
+          height: 87px;
+          background-color: #f3f3f3;
+          margin-top: -5px;
+          text-align: center;
+          padding-top: 15px;
+          box-sizing: border-box; }
+          body .container main section:nth-of-type(2) div div.works div div p {
+            color: #848484;
+            font-size: 12px;
+            line-height: 30px; }
+            body .container main section:nth-of-type(2) div div.works div div p span {
+              color: #d1531e;
+              font-size: 18px;
+              font-weight: bold; }
+      body .container main section:nth-of-type(2) div div.works div:last-of-type {
+        margin-right: 0px; }
+    body .container main section:nth-of-type(3) {
+      margin-bottom: 62px; }
+      body .container main section:nth-of-type(3) div {
+        vertical-align: top; }
+        body .container main section:nth-of-type(3) div .left {
+          margin-right: 34px;
+          width: 48%;
+          display: inline-block;
+          vertical-align: inherit; }
+          body .container main section:nth-of-type(3) div .left div {
+            margin-top: 15px;
+            vertical-align: top;
+            box-sizing: border-box; }
+            body .container main section:nth-of-type(3) div .left div img {
+              width: 55%; }
+            body .container main section:nth-of-type(3) div .left div div {
+              display: inline-block;
+              width: 40%;
+              vertical-align: inherit;
+              padding-left: 15px; }
+              body .container main section:nth-of-type(3) div .left div div p:first-child {
+                font-size: 18px;
+                color: #333;
+                font-weight: bold;
+                text-transform: uppercase; }
+              body .container main section:nth-of-type(3) div .left div div p:last-child {
+                margin-top: 15px;
+                color: #848484;
+                font-size: 13px; }
+            body .container main section:nth-of-type(3) div .left div p {
+              margin-top: 20px;
+              color: #848484;
+              font-size: 15px; }
+              body .container main section:nth-of-type(3) div .left div p a {
+                text-decoration: none;
+                color: #d1531e; }
+        body .container main section:nth-of-type(3) div .right {
+          width: 48%;
+          display: inline-block; }
+    body .container footer {
+      background-color: #333; }
+      body .container footer div {
+        margin-top: 50px; }
+        body .container footer div div {
+          width: 23%;
+          display: inline-block;
+          margin-right: 16px; }
+          body .container footer div div h3 {
+            color: #f3f3f3; }
 
 /*# sourceMappingURL=style.css.map */
