--- a/Exo2/css/style.css
+++ b/Exo2/css/style.css
@@ -158,7 +158,9 @@ body {
         body .container-2 footer div.div-footer div.footer-1 img:not(:first-child) {
           margin-top: 10px; }
         body .container-2 footer div.div-footer div.footer-1 img:nth-of-type(2) {
-          background-size: 50px 50px; }
+          background-size: 0px -50px;
+          height: 50px;
+          width: 50px; }
         body .container-2 footer div.div-footer div.footer-2 p {
           font-size: 12px;
           margin-bottom: 10px; }
@@ -166,5 +168,7 @@ body {
           padding-bottom: 12px;
           border-bottom: 1px dotted #848484;
           margin-top: 12px; }
+        body .container-2 footer div.div-footer div.footer-4 img {
+          width: 23%; }
 
 /*# sourceMappingURL=style.css.map */
