image du bas + hover

--- a/Exo2/css/sass/pages/home.scss
+++ b/Exo2/css/sass/pages/home.scss
@@ -208,17 +208,46 @@ body {
                         div {
                             p {
                                 font-style: italic;
+                            }                       
+                            ul {
+                                margin-top: 10px;    
+                                li {
+                                list-style: none;
+                                height: 46px;
+                                width: 47px;
+                                display: inline-block;
+                                background: url("../img/social-icons.png") no-repeat;
+                                    &.icon-1 {
+                                        background-position: left top;
+                                        &:hover {
+                                            background-position: left bottom;
+                                        }
+                                    }
+                                    &.icon-2 {
+                                        background-position: -52px top;
+                                        &:hover {
+                                            background-position: -52px bottom;
+                                        }
+                                    }
+                                    &.icon-3 {
+                                        background-position: -103px top;
+                                        &:hover {
+                                            background-position: -103px bottom;
+                                        }
+                                    }
+                                    &.icon-4 {
+                                        background-position: right top;
+                                        &:hover {
+                                            background-position: right bottom;
+                                        }
+                                    }
+                                }
                             }
                         }
                         img:not(:first-child) {
                             margin-top: 10px;
                         }
-                        img:nth-of-type(2)
-                        {
-                            background-size: 0px -50px;
-                            height: 50px;
-                            width: 50px;
-                        }
+
                     }
                     div.footer-2 {
                         p {
