--- a/Exo2/css/sass/pages/home.scss
+++ b/Exo2/css/sass/pages/home.scss
@@ -239,6 +239,9 @@ body {
                         }
                     }
                 }
+            .foofooter {
+                background-color: aqua;
+            }
             }
     }
 }
